<resources>
    <string name="app_name">i-so POS</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="tab_stream">Stream</string>
    <string name="tab_messages">Messages</string>
    <string name="tab_notifications">Notifications</string>
    <string name="tab_photos">Photos</string>
    <string name="button_ok">OK</string>
    <string name="message_exit">Exit i-so pos</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_order">Order</string>
    <string name="button_shipment">Shipment</string>
    <string name="button_inventory">Inventory</string>
    <string name="button_record">Record</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_activity_goods_detail">GoodsDetailActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <!-- TODO: goods_detail Didalog -->
    <string name="goods_detail_count">Count: </string>
    <string name="goods_detail_price">Price: </string>
    <string name="goods_detail_subtotal">Subtoal: </string>
    <string name="goods_detail_discount">Discount: </string>
    <string name="goods_detail_comment">Comment:  </string>
    <!-- TODO: Goods Recored Activtiy -->
    <string name="goods_cart_title">Goods Cart</string>
    <string name="goods_cart_subtotal">Subtotal:</string>
    <string name="goods_cart_submit">Submit</string>
    <string name="goods_cart_print">Print</string>
    <!-- TODO: Record_detail Didalog -->
    <string name="goods_record_detail_service_persion">Service Persion: </string>
    <string name="goods_record_detail_subtotal">Subtotal: </string>
    <string name="goods_record_detail_single_price">Price: </string>
    <string name="goods_record_detail_comment">Comment:  </string>
    <string name="goods_record_detail_count">Count:  </string>
    <string name="goods_record_detail_addGoods">Add to Cart</string>
    <string name="goods_record_detail_modifyGoods">Modify</string>
    <!-- TODO: Goods Cart ListView Item -->
    <string name="goods_cart_listview_price">Price:  </string>
    <string name="goods_cart_listview_subtotal">Subtotal: </string>
    <!-- Menu Item -->
    <string name="menu_search">Search</string>
    <string name="menu_scan_barcode">Scan Barcode</string>
    <string name="menu_cart">Cart</string>

    <!-- Print Dialog -->
    <string name="str_message">tip：</string>
    <string name="str_connlast">whether connect to last device？</string>
    <string name="yesconn">connect</string>
    <string name="str_resel">search again</string>
    <string name="conn_failed">connection fail</string>
    <string name="conn_closed">connection closed</string>
    <string name="conn_no">can not connect</string>
    <string name="bt_not_enabled">Bluetooth is not available</string>
    <!--  DeviceListActivity -->
    <string name="scanning">Scanning for devices...</string>
    <string name="select_device">Please select a device to connect</string>
    <string name="none_paired">No devices has been paired</string>
    <string name="has_paired">paired</string>
    <string name="not_paired">not paired</string>
    <string name="rePaire_connect">Re-pair And Connect</string>
    <string name="unpair">Unpair</string>
    <string name="paire_connect">Pair And Connect</string>
    <string name="connect_paired">Connect</string>
    <string name="select_options">Select Options</string>
    <string name="none_found">No devices found</string>
    <string name="no_bounded_device">Don\'t found device which name start with %s</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for new devices</string>
    <string name="button_back">back</string>

    <!--  Incoming Caller Activity -->
    <!--<string name="button_customer_info">Customer Info</string>-->
    <!--<string name="button_new_reservation">New reservation</string>-->
    <string name="button_customer_info">顧客資料</string>
    <string name="button_new_reservation">新增預約</string>
    <string name="USERLOGIN_NAME_HINT_EDITTEXT">請輸入您的名稱、手機或員工編號</string>
    <string name="USERLOGIN_PASSWORD_HINT_EDITTEXT">密碼</string>
    <string name="USERLOGIN_TITLE_TEXTVIEW">登入 i-so POS</string>
    <string name="USERLOGIN_LOGIN_BUTTON">登入</string>
    <string name="MAINVIEW_QRCODE_LOGIN_BUTTON">QRCode 登入</string>
    <string name="USERLOGIN_STARTUP_INCOMING_SERVICE">已啟動顧客來電顯示服務</string>
    <string name="USERLOGIN_VERIFICATION_SUCCESFUL">驗證成功</string>
    <string name="USERLOGIN_VERIFICATION_FAILED">驗證失敗, 請重新輸入</string>
    <string name="USERLOGIN_ENJOY_ISO_POS">開始享受i-so POS</string>
    <string name="USERLOGIN_QECODE_VERIFICATION_SUCCESFUL">已完成QRCode驗證</string>
</resources>
