<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="#FFFFFFFF">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/USERLOGIN_TITLE_TEXTVIEW"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:textColor="#FF000000" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:background="@drawable/userlogin_linearlayout_outline"
        android:layout_margin="20dp">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:gravity="bottom">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/userLoginImageView"
                android:layout_gravity="center_horizontal|bottom"
                android:src="@mipmap/user_login"
                android:layout_marginTop="15dp" />
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/userNameEditText"
                android:layout_gravity="center_horizontal"
                android:hint="@string/USERLOGIN_NAME_HINT_EDITTEXT"
                android:layout_marginTop="30dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/passwordEditText"
                android:layout_gravity="center_horizontal"
                android:hint="@string/USERLOGIN_PASSWORD_HINT_EDITTEXT"
                android:layout_marginTop="25dp" />
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="25dp">
            <Button
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/USERLOGIN_LOGIN_BUTTON"
                android:id="@+id/loginButton"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/userlogin_button"
                android:paddingTop="10dp"
                android:paddingBottom="10dp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
